OK, responsive design for mobile and tablet made and working so far, added collapser for more info (also made responsive), it actually pulls the right information and displays it almost correctly inside the collapser

--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@
     }
     .coinname{
         color: black;
-        font-size: 1.5em;
+        font-size: 1.1em;
     }
     .flexalign{
         display: flex;
@@ -44,7 +44,10 @@
     .makeinline{
         display: inline-block;
         width: 25%;
-        height: 12em;
+        min-height: 12em;
+        max-height: 25em;
+        margin-top: 1em !important;
+        margin-bottom: 1em !important;
     }
     
     
@@ -139,7 +142,7 @@
     
     .parallax {
         /* The image used */
-        background-color: red;
+        background-image: url('images/temporary.jpg');
       
         /* Full height */
         height: 100%; 
@@ -150,6 +153,107 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+
+
+
+    #pagecont{
+        width: 100%;
+        text-align: center;
+        margin-top: 7em;
+    }
+
+
+    /*single card styling*/
+    
+    .coinsymbol{
+        color: black;
+        font-size: 1.8em;
+    }
+    .coinname{
+        color: black;
+        font-size: 0.9em;
+    }
+    .flexalign{
+        display: flex;
+        justify-content: space-between;
+    }
+    .makeinline{
+        display: inline-block;
+        width: 25%;
+        min-height: 12em;
+        max-height: 25em;
+        margin-top: 1em !important;
+        margin-bottom: 1em !important;
+    }
+
+
+
+
+
+        /*Toggler CSS*/
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 3.75em;
+        height: 2.125em;
+      }
+      
+      .switch input { 
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+      }
+      
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 1.625em;
+        width: 1.625em;
+        left: 0.25em;
+        bottom: 0.25em;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+      }
+      
+      input:checked + .slider {
+        background-color: #2196F3;
+      }
+      
+      input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+      }
+      
+      input:checked + .slider:before {
+        -webkit-transform: translateX(1.625em);
+        -ms-transform: translateX(1.625em);
+        transform: translateX(1.625em);
+      }
+      
+      /* Rounded sliders */
+      .slider.round {
+        border-radius: 2.125em;
+      }
+      
+      .slider.round:before {
+        border-radius: 50%;
+      }
+
+
+
+
 }
 
 
@@ -163,7 +267,7 @@
     
     .parallax {
         /* The image used */
-        background-color: red;
+        background-image: url('images/temporary.jpg');
       
         /* Full height */
         height: 100%; 
@@ -174,4 +278,110 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+
+
+    #pagecont{
+        width: 100%;
+        text-align: center;
+        margin-top: 7em;
+    }
+
+
+
+
+    /*single card styling*/
+    
+    .coinsymbol{
+        color: black;
+        font-size: 1.8em;
+    }
+    .coinname{
+        color: black;
+        font-size: 1.1em;
+    }
+    .flexalign{
+        display: flex;
+        justify-content: space-between;
+    }
+    .makeinline{
+        display: block;
+        width: 100%;
+        min-height: 12em;
+        max-height: 25em;
+        margin-top: 2em !important;
+        margin-bottom: 2em !important;
+    }
+
+
+
+
+
+
+
+    /*Toggler CSS*/
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 3.75em;
+        height: 2.125em;
+      }
+      
+      .switch input { 
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+      }
+      
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 1.625em;
+        width: 1.625em;
+        left: 0.25em;
+        bottom: 0.25em;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+      }
+      
+      input:checked + .slider {
+        background-color: #2196F3;
+      }
+      
+      input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+      }
+      
+      input:checked + .slider:before {
+        -webkit-transform: translateX(1.625em);
+        -ms-transform: translateX(1.625em);
+        transform: translateX(1.625em);
+      }
+      
+      /* Rounded sliders */
+      .slider.round {
+        border-radius: 2.125em;
+      }
+      
+      .slider.round:before {
+        border-radius: 50%;
+      }
+
+
+      /*bootstrap override*/
+      .card{
+          min-width: 20em;
+      }
   }
